# pyproject.toml

[project]
name = "shared-core"
version = "0.1.2"
dependencies = [
    "loguru==0.7.2",
    "psutil>=5.9.0",
    "shared-db-clients @ git+https://github.com/venoajie/shared-db-clients.git@v0.1.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
